[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Ian Thomas <thomasian06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"
ruff = "^0.1.14"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
